Fix the example namespaces.

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ src/
       <pre class="prettyprint" data-lang="php">
 &lt;?php
 
-namespace AppBundle;
+namespace AppBundle\Controller;
 
-class Controller
+class MyController
 {
 }</pre>
     </article>
@@ -127,9 +127,9 @@ src/
       <pre class="prettyprint" data-lang="php">
 &lt;?php
 
-namespace App;
+namespace App\Controller;
 
-class Controller
+class MyController
 {
 }</pre>
     </article>
