Fix the array key in the hooks example

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ $GLOBALS['TL_HOOKS']['replaceInsertTags'][] = array(
       <pre class="prettyprint" data-lang="php">
 &lt;?php
 
-$GLOBALS['TL_DCA']['tl_form_field'] = array(
+$GLOBALS['TL_DCA']['tl_faq'] = array(
     'config' => array(
         'onload_callback' => array(
             array(<b>'contao_faq.security.permission_checker', 'onCheckFaq'</b>)
